--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "mongoose": "^8.4.4"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.10.0",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "husky": "^9.0.11",
@@ -39,6 +41,6 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
-    "script": "^0.1.4"
+    "script": "^0.0.12"
   }
 }
